# Voxing

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  assistant.py  main.py  pyproject.toml  reachy.py  tui_main.py
.github/workflows/: publish.yml
experiments/: audio_player.py  stt.py  tts.py
experiments/parakeet/: __init__.py  _audio.py  _conformer.py  _ctc.py  _model.py
reachy_tui/: __init__.py  app.py  config.py  state.py  styles.css  themes.py
reachy_tui/mocks/: __init__.py  audio_mock.py  llm_mock.py  stt_mock.py  tts_mock.py
reachy_tui/models/: __init__.py  audio.py  llm.py  stt.py  tts.py
reachy_tui/widgets/: __init__.py  conversation.py  metrics_panel.py  status_panel.py
scripts/: llm.py  stt.py  tts.py
src/vox/: app.py  audio.py  config.py  state.py
src/vox/models/: __init__.py  llm.py  stt.py  tts.py
src/voxing/: __init__.py  __main__.py  _download.py  _progress.py  app.py  audio.py  config.py  llm.py  palette.py  state.py  stt.py  styles.tcss  themes.py  tts.py  waveform.py
src/voxing/chatterbox/: __init__.py  _base.py  _model.py
src/voxing/chatterbox/models/: __init__.py
src/voxing/chatterbox/models/s3gen/: __init__.py  decoder.py  encoder.py  flow_matching.py  hifigan.py  mel.py  s3gen.py  xvector.py
src/voxing/chatterbox/models/t3/: __init__.py  cond_enc.py  gpt2.py  t3.py  t3_config.py
src/voxing/chatterbox/models/voice_encoder/: __init__.py  config.py  melspec.py  voice_encoder.py
src/voxing/kokoro/: __init__.py  _base.py  _dsp.py  _interpolate.py  _model.py  istftnet.py  kokoro.py  modules.py  pipeline.py  voice.py
src/voxing/mimi/: __init__.py  mimi.py
src/voxing/mimi/modules/: __init__.py  conv.py  quantization.py  seanet.py  transformer.py
src/voxing/models/: __init__.py  llm.py  stt.py  tts.py
src/voxing/parakeet/: __init__.py  _alignment.py  _attention.py  _audio.py  _conformer.py  _dsp.py  _model.py  _rnnt.py
src/voxing/qwen3_tts/: __init__.py  _audio.py  _base.py  _model.py  config.py  qwen3_tts.py  speaker_encoder.py  speech_tokenizer.py  talker.py
src/voxing/tui/: __init__.py  app.py  messages.py  screens.py  styles.tcss  theme.py  widgets.py
src/voxing/tui/screens/: __init__.py  chat.py  radial.py  settings.py  tool_detail.py
src/voxing/viz/: __init__.py  _braille.py  _oscilloscope.py  _protocol.py  _radial.py  _spectrogram.py  _spectrum.py  _waveform.py
src/voxing/widgets/: __init__.py  chat_input.py  conversation.py  metrics_panel.py  model_selector.py  perf_stats.py  status_panel.py
tests/: README.md  conftest.py  test_app.py  test_braille.py  test_messages.py  test_snapshots.py  test_workflows.py
tests/__snapshots__/test_app/: test_snap_after_clear.raw  test_snap_command_hints.raw  test_snap_initial.raw  test_snap_settings_screen.raw
tests/__snapshots__/test_snapshots/: test_command_hints_display.raw  test_initial_app_screen.raw
vox/: __init__.py  app.py  audio.py  config.py  state.py  styles.css  styles.tcss  themes.py
vox/models/: __init__.py  _streaming.py  audio.py  llm.py  tts.py
vox/widgets/: __init__.py  chat_input.py  conversation.py  metrics_panel.py  model_selector.py  status_panel.py
