[project]
name = "vox"
version = "0.1.0"
description = "Voice assistant TUI powered by local MLX models"
readme = "README.md"
requires-python = "==3.13.*"
authors = [{ name = "yeungadrian" }]
dependencies = [
    "langdetect>=1.0.9",
    "mlx-audio[tts]==0.3.1",
    "mlx-lm>=0.30.5",
    "pip>=26.0.1",
    "pydantic-settings>=2.12.0",
    "rich>=14.3.1",
    "sounddevice>=0.5.3",
    "textual>=7.5.0",
    "typer>=0.23.1",
]

[project.scripts]
vox = "vox.__main__:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-textual-snapshot>=1.0.0",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
