[project]
name = "voxing"
version = "0.1.4"
description = "Voice assistant TUI powered by local MLX models"
readme = "README.md"
requires-python = "==3.13.*"
authors = [{ name = "yeungadrian" }]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
]
dependencies = [
    "langdetect>=1.0.9",
    "mlx-lm>=0.30.5",
    "psutil>=7.2.2",
    "pydantic-settings>=2.12.0",
    "rich>=14.3.1",
    "sounddevice>=0.5.3",
    "textual>=7.5.0",
]

[project.urls]
Homepage = "https://github.com/yeungadrian/Voxing"
Repository = "https://github.com/yeungadrian/Voxing"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-textual-snapshot>=1.0.0",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
